--- a/styles/components/SubmitButton.css
+++ b/styles/components/SubmitButton.css
@@ -1,22 +1,23 @@
-.link-button {
+.submit-button {
     display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 300px;
     height: 50px;
     margin: 1%;
-    border: solid 2px black;
-    border-radius: 10px;
+    background-color: var(--color-white);
+    border: none;
+    border-radius: 0.2rem;
     text-decoration: none;
-    color: black;
+    font-family: var(--monospaced-font);
+    font-size: 1.2rem;
+    color: var(--color-black);
 
     transition: transform 0.2s;
 }
 
-.link-button:hover {
+.submit-button:hover {
     transform: scale(1.1);
     cursor: pointer;
-    background-color: black;
     font-weight: bold;
-    color: white;
 }
