--- a/styles/generic/reset.css
+++ b/styles/generic/reset.css
@@ -5,6 +5,11 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
+    background-color: var(--color-white);
 }
