Create Calculator component

--- a/styles/components/components.css
+++ b/styles/components/components.css
@@ -11,3 +11,11 @@
 
 @import "./MainTitle.css";
 @import "./FormTitle.css";
+
+/* Calculator */
+
+@import "./CalculatorDisplay.css";
+@import "./CalculatorButtons.css";
+
+@import "./CalculatorButton.css";
+@import "./CalculatorPanel.css";
